<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="24dp"
    app:cardBackgroundColor="@color/aliceblue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainAdapter"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title_detail"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
            android:id="@+id/tvNameCoinAskBidsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/name_coin"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_bitcoin_asset"
            android:drawablePadding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">
        </TextView>

        <TextView
            android:id="@+id/tvNameCoinAskBids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_coin"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvNameCoinAskBidsLabel"
            app:layout_constraintTop_toTopOf="@+id/tvNameCoinAskBidsLabel">
        </TextView>

        <TextView
            android:id="@+id/tvPriceAskBidsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_price_ask"
            android:drawablePadding="8dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameCoinAskBidsLabel">
        </TextView>

        <TextView
            android:id="@+id/tvPriceAskBids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvPriceAskBidsLabel"
            app:layout_constraintTop_toTopOf="@+id/tvPriceAskBidsLabel">
        </TextView>

        <TextView
            android:id="@+id/tvAmountAskBidsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_amount"
            android:drawablePadding="8dp"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceAskBidsLabel">
        </TextView>

        <TextView
            android:id="@+id/tvAmountAskBids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvAmountAskBidsLabel"
            app:layout_constraintTop_toTopOf="@+id/tvAmountAskBidsLabel">
        </TextView>

        <TextView
            android:id="@+id/tvOrderAskBidsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:drawableLeft="@drawable/ic_order_id"
            android:text="@string/order_id"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAmountAskBidsLabel">
        </TextView>

        <TextView
            android:id="@+id/tvOrderAskBids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/order_id"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrderAskBidsLabel"
            app:layout_constraintStart_toEndOf="@+id/tvOrderAskBidsLabel"
            app:layout_constraintTop_toTopOf="@+id/tvOrderAskBidsLabel">
        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>